# eselect-go

./: .gitignore  Makefile.am  README.md  configure.ac  go.eselect.in
src/: common.c  common.h  tests.c  wrapper.c
